# plankton_ml

./: .env  .flake8  .gitignore  CONTRIBUTING.md  README.md  conda-lock.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: conda.yml  coverage.yml  lint.yml  pages_graphs.yml  pytest_coverage.yml
cyto_ml/data/: decollage.py  intake.py  s3.py  vectorstore.py
cyto_ml/models/: scivision.py
cyto_ml/tests/: conftest.py  test_decollage.py  test_image_embeddings.py  test_intake_utils.py  test_object_store.py  test_prepare_image.py  test_vector_store.py  test_visualisation_app.py
cyto_ml/tests/fixtures/cefas_images/: copepod_1.tif
cyto_ml/tests/fixtures/test_images/: testymctestface_127.tif  (+11 more)
cyto_ml/visualisation/: visualisation_app.py
cyto_ml/visualisation/pages/: 02_kmeans.py
docs/: _config.yml  index.md
docs/diagrams/: index.md
docs/diagrams/as_is/: instrument_to_store.dot
docs/diagrams/could_be/: instrument_to_store.dot  task_graph.dot
docs/flowcam/: index.md
fixtures/MicrobialMethane_MESO_Tank10_54.0143_-2.7770_04052023_1/: MicrobialMethane_MESO_Tank10_54.0143_-2.7770_04052023_1_images_000001.tif  metadata.lst
fixtures/test_collage/: metadata.lst
fixtures/test_images/: testymctestface_1091.tif  testymctestface_1407.tif  testymctestface_1914.tif  testymctestface_1948.tif  testymctestface_1962.tif  testymctestface_2071.tif
notebooks/: BioclipExperiment.md  Clustering.md  ImageEmbeddings.ipynb  ImageEmbeddings.md  ModelExplainability.ipynb  VectorSearch.ipynb  VectorSearch.md
scripts/: image_embeddings.py  intake_metadata.py  render_diagrams.sh
src/cyto_ml/data/: intake.py  vectorstore.py
src/cyto_ml/models/: scivision.py
tests/: conftest.py  test_image_embeddings.py  test_prepare_image.py
tests/fixtures/test_images/: testymctestface_1388.tif  testymctestface_1830.tif  testymctestface_1876.tif  testymctestface_1915.tif  testymctestface_1919.tif  testymctestface_1922.tif  testymctestface_1924.tif  testymctestface_1953.tif  testymctestface_1965.tif  testymctestface_2012.tif  testymctestface_2102.tif  testymctestface_2108.tif  testymctestface_2110.tif  testymctestface_2117.tif  testymctestface_2119.tif  testymctestface_2172.tif  testymctestface_3612.tif  testymctestface_3814.tif
tests/tests/: test_image_embeddings.py
(+4 files in other folders)
