[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyto_ml"
version = "0.1.0"
requires-python = "==3.9.*"
description = "This package supports the processing and analysis of plankton sample data"
readme = "README.md"

[tool.jupytext]
formats = "ipynb,md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
target-version = ["py39"]
line-length = 88
