[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyto_ml"
version = "0.2.0"
requires-python = ">=3.12"
description = "This package supports the processing and analysis of plankton sample data"
readme = "README.md"
dependencies = [
    "chromadb",
    "python-dotenv",
    "s3fs",
    "torch",
]

[project.optional-dependencies]
jupyter = ["ipython", "jupyterlab", "jupytext"]
dev = ["pytest", "black", "flake8", "isort"]

[tool.jupytext]
formats = "ipynb,md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
target-version = ["py312"]
line-length = 88
